fixed info modal so that it isn't cut off on short screens

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,13 @@ body {
   @apply h-full;
 }
 
-html {
+/* html {
   @apply h-full;
+} */
+
+html,
+body,
+:root {
+  min-height: 100%;
+  position: relative;
 }
